# turbo-ea

./: CHANGELOG.md  CLAUDE.md  mkdocs.yml
.github/workflows/: restrict-pr-authors.yml  version-check.yml
backend/: pyproject.toml
backend/alembic/versions/: 085_risk_mitigation_tasks.py  086_mitigation_task_reference.py  087_mitigation_task_lead_time.py  088_grant_users_invite_to_bpm_admin.py  089_relocate_compliance_scanner.py  095_widen_migration_source_id_to_text.py  108_backfill_arabic_enabled_locale.py  110_diagram_groups_and_favorites.py  111_drop_diagram_type.py
backend/app/: main.py
backend/app/api/v1/: auth.py  bpm.py  cards.py  diagram_groups.py  diagrams.py  metamodel.py  migration.py  relations.py  reports.py  risk_mitigation_tasks.py  risks.py  router.py  saved_reports.py  settings.py  turbolens.py  users.py
backend/app/core/: permissions.py  security.py
backend/app/models/: __init__.py  diagram.py  diagram_favorite.py  diagram_group.py  leanix.py  migration.py  risk.py  risk_mitigation_task.py  survey.py  turbolens.py
backend/app/schemas/: auth.py  bpm.py  card.py  relation.py  risk.py  risk_mitigation_task.py
backend/app/services/: event_bus.py  leanix_snapshot_parser.py  leanix_xlsx_parser.py  permission_service.py  risk_mitigation_task_service.py  risk_service.py  seed.py  seed_demo.py  seed_demo_extras.py  seed_demo_security.py  turbolens_architect.py
backend/app/services/workspace_io/: applier.py  exporter.py  sections.py
backend/tests/: conftest.py
backend/tests/api/: test_admin_dashboard.py  test_auth_impersonation.py  test_bpm.py  test_cards.py  test_cards_bulk_create.py  test_compliance_bulk.py  test_compliance_regulations.py  test_diagrams.py  test_diagrams_groups.py  test_metamodel.py  test_my_workspace.py  test_relations_bulk.py  test_reports_app_portfolio.py  test_risk_mitigation_tasks.py  test_risks.py  test_saved_reports.py  test_settings.py  test_users.py
backend/tests/services/: test_compliance_scanner_dedup.py  test_i18n_seed.py  test_leanix_xlsx_parser.py  test_migration_long_source_id.py  test_risk_mitigation_task_service.py  test_workspace_io_roundtrip.py
docs/: index.ar.md
docs/admin/: ai.ar.md  api.ar.md  calculations.ar.md  eol.ar.md  index.ar.md  index.de.md  index.es.md  index.fr.md  index.it.md  index.md  index.pt.md  index.ru.md  index.zh.md  mcp.ar.md  mcp.de.md  mcp.es.md  mcp.fr.md  mcp.it.md  mcp.md  mcp.pt.md  mcp.ru.md  mcp.zh.md  metamodel.ar.md  metamodel.da.md  metamodel.de.md  metamodel.es.md  metamodel.fr.md  metamodel.it.md  metamodel.md  metamodel.pt.md  metamodel.ru.md  metamodel.zh.md  migration.ar.md  migration.de.md  migration.es.md  migration.fr.md  migration.it.md  migration.md  migration.pt.md  migration.ru.md  (+18 more)
docs/api/: openapi.json
docs/beginners-guide/: customise-the-metamodel.ar.md  index.ar.md  leverage-reference-catalogues.ar.md  plan-your-rollout.ar.md  start-with-applications.ar.md  your-first-analysis.ar.md
docs/getting-started/: login.ar.md  setup.ar.md
docs/guide/: bpm.ar.md  compliance.md  (+78 more)
frontend/: index.html  package-lock.json  package.json
mcp-server/: pyproject.toml
mcp-server/tests/: test_write_tools.py
mcp-server/turbo_ea_mcp/: api_client.py  config.py  server.py
(+202 files in other folders)
