[project]
name = "turbo-ea-backend"
version = "0.0.0"  # Placeholder — real version read from /VERSION at runtime
description = "Turbo EA - Enterprise Architecture Management API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.0",
    "httpx>=0.28.0",
    "email-validator>=2.1.0",
    "PyJWT>=2.9.0",
    "cryptography>=42.0.0",
    "slowapi>=0.1.9",
    "simpleeval>=1.0.0",
    "defusedxml>=0.7.1",
    "openpyxl>=3.1.0",
    "turbo-ea-capabilities>=2026.5.11.505",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pip-audit>=2.7.0",
    "pip-tools>=7.4.0",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"app/services/seed*.py" = ["E501"]
"app/services/turbolens_*.py" = ["E501"]
"alembic/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["app/services/seed*.py"]

[tool.coverage.report]
fail_under = 40
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Start permissive — tighten per-module as types are added
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "alembic.versions.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "app.services.seed",
    "app.services.seed_demo",
    "app.services.seed_demo_bpm",
]
ignore_errors = true

# Pre-existing type errors — remove modules as types are added
[[tool.mypy.overrides]]
module = [
    "app.main",
    "app.services.calculation_engine",
    "app.services.servicenow_service",
    "app.api.v1.auth",
    "app.api.v1.bookmarks",
    "app.api.v1.bpm_reports",
    "app.api.v1.bpm_workflow",
    "app.api.v1.cards",
    "app.api.v1.metamodel",
    "app.api.v1.reports",
    "app.api.v1.roles",
    "app.api.v1.settings",
    "app.api.v1.stakeholders",
    "app.api.v1.web_portals",
]
ignore_errors = true
